<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.dicoding.gardenguard.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_diagnose"
        android:name="com.dicoding.gardenguard.ui.diagnose.DiagnoseFragment"
        android:label="@string/title_diagnose"
        tools:layout="@layout/fragment_diagnose" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.dicoding.gardenguard.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>